force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Contract_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Contract_Duration_Days__c</fullName>
    <description>The duration from Start Date to End Date in days</description>
    <formula>IF(AND(ISPICKVAL(Apttus__Status_Category__c,"In Effect"), (Apttus__Contract_End_Date__c >= Apttus__Contract_Start_Date__c)),  (Apttus__Contract_End_Date__c - Apttus__Contract_Start_Date__c) + 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>