force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Amend__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Amend__c</fullName>
    <description>Amend the agreement</description>
    <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,"In Effect"),NOT(ISPICKVAL(Apttus__Status__c,"Being Amended")), NOT(ISPICKVAL(Apttus__Status__c,"Being Renewed")))), HYPERLINK("/apex/Apttus__AgreementAmend?id=" &amp;Id, IMAGE("/resource/Apttus__Button_Amend", "Amend"),"_self"),NULL)</formula>
    <inlineHelpText>Amend the agreement</inlineHelpText>
    <label>Amend</label>
    <type>Text</type>
</CustomField>