force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Cancel_Request__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Cancel_Request__c</fullName>
    <description>Cancel the agreement request</description>
    <formula>IF (AND(OR(ISPICKVAL(Apttus__Status_Category__c,"Request"), ISPICKVAL(Apttus__Status_Category__c,"In Authoring"), ISPICKVAL(Apttus__Status_Category__c,"In Signatures"), ISPICKVAL(Apttus__Status_Category__c,"In Filing")),NOT(ISPICKVAL(Apttus__Status__c,"Cancelled Request"))), HYPERLINK("/apex/Apttus__AgreementCancel?id=" &amp;Id, IMAGE("/resource/Apttus__Button_CancelRequest", "Cancel Request"), "_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cancel the agreement request</inlineHelpText>
    <label>Cancel Request</label>
    <type>Text</type>
</CustomField>