force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Execute__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Execute__c</fullName>
    <description>Activates the agreement</description>
    <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c,"In Signatures"), ISPICKVAL(Apttus__Status_Category__c,"In Filing"), AND(ISPICKVAL(Apttus__Status_Category__c,"In Authoring"),ISPICKVAL(Apttus__Source__c,"Other Party Paper"))), HYPERLINK("/apex/Apttus__AgreementActivate?id=" &amp;Id, IMAGE("/resource/Apttus__Button_Activate", "Activate"),"_self"),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Activates the agreement</inlineHelpText>
    <label>Activate</label>
    <type>Text</type>
</CustomField>