force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Expire__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Expire__c</fullName>
    <description>Expire the agreement</description>
    <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,"In Effect"),NOT(ISPICKVAL(Apttus__Status__c,"Being Amended")), NOT(ISPICKVAL(Apttus__Status__c,"Being Renewed")))), HYPERLINK("/apex/Apttus__AgreementExpire?id=" &amp; Id, IMAGE("/resource/Apttus__Button_Expire", "Expire"),"_self"), NULL)</formula>
    <inlineHelpText>Expire the agreement</inlineHelpText>
    <label>Expire</label>
    <type>Text</type>
</CustomField>