force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Generate_Protected_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Generate_Protected_Agreement__c</fullName>
    <description>Generates a read-only password protected agreement</description>
    <formula>IF (ISPICKVAL(Apttus__Status_Category__c, "Request"), HYPERLINK("/servlet/servlet.Integration?lid=00b50000000lgo8"&amp;"&amp;eid="&amp;Id, "Generate Agreement","_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Protected (OBSOLETE)</label>
    <type>Text</type>
</CustomField>