force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Generate_Supporting_Document__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Generate_Supporting_Document__c</fullName>
    <formula>IF (True, HYPERLINK("/apex/Apttus__SelectTemplate?id=" &amp;Id &amp; "&amp;action=Generate_Supporting_Document&amp;templateType=Supporting_Document", IMAGE("/resource/Apttus__Button_GenerateSupportingDocument", "Generate Supporting Document"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Supporting Document</label>
    <type>Text</type>
</CustomField>