force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Regenerate_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Regenerate_Agreement__c</fullName>
    <description>Conditionally show the "Regenerate" custom button</description>
    <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c,"In Authoring"), ISPICKVAL(Apttus__Status_Category__c,"In Signatures"), ISPICKVAL(Apttus__Status_Category__c,"In Filing")), HYPERLINK("/apex/Apttus__SelectTemplate?id=" &amp;Id &amp; "&amp;action=Regenerate_Agreement&amp;templateType=Agreement", IMAGE("/resource/Apttus__Button_Regenerate", "Regenerate"), "_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Regenerate the agreement</inlineHelpText>
    <label>Regenerate</label>
    <type>Text</type>
</CustomField>