force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Renew__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Renew__c</fullName>
    <description>Renew the agreement</description>
    <formula>IF (OR(AND((ISPICKVAL(Apttus__Status_Category__c,"In Effect")),NOT(ISPICKVAL(Apttus__Status__c,"Being Renewed")),NOT(ISPICKVAL(Apttus__Status__c,"Being Amended")))), HYPERLINK("/apex/Apttus__AgreementRenew?id=" &amp; Id, IMAGE("/resource/Apttus__Button_Renew", "Renew"),"_self"), NULL)</formula>
    <inlineHelpText>Renew the agreement</inlineHelpText>
    <label>Renew</label>
    <type>Text</type>
</CustomField>