force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Return_To_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Return_To_Requestor__c</fullName>
    <description>Return the agreement to the requestor</description>
    <formula>IF ((ISPICKVAL(Apttus__Status_Category__c,"In Authoring")), HYPERLINK("/apex/Apttus__AgreementReturnToRequestor?id=" &amp;Id, IMAGE("/resource/Apttus__Button_ReturnToRequestor", "Return To Requestor"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Return the agreement to the requestor</inlineHelpText>
    <label>Return To Requestor</label>
    <type>Text</type>
</CustomField>