force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Send_To_Other_Party_For_Review__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Send_To_Other_Party_For_Review__c</fullName>
    <description>Send agreement for review</description>
    <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c,"In Signatures"), ISPICKVAL(Apttus__Status_Category__c,"In Authoring")),HYPERLINK("/apex/Apttus__SendEmail?id="&amp;Id &amp; "&amp;action=Send_To_Other_Party_For_Review", IMAGE("/resource/Apttus__Button_SendForReview", "Send For Review"), "_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Send agreement for review</inlineHelpText>
    <label>Send For Review</label>
    <type>Text</type>
</CustomField>