force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Send_To_Other_Party_For_Signatures__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Send_To_Other_Party_For_Signatures__c</fullName>
    <description>Send the agreement for signatures</description>
    <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c,"In Signatures"), ISPICKVAL(Apttus__Status_Category__c,"In Authoring")),HYPERLINK("/apex/Apttus__SendEmail?id="&amp;Id &amp; "&amp;action=Send_To_Other_Party_For_Signatures", IMAGE("/resource/Apttus__Button_SendForSignatures", "Send For Signatures"), "_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Send the agreement for signatures</inlineHelpText>
    <label>Send For Signatures</label>
    <type>Text</type>
</CustomField>