force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Send_To_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Send_To_Third_Party__c</fullName>
    <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c,"In Signatures"), AND(ISPICKVAL(Apttus__Status_Category__c,"In Authoring"),ISPICKVAL(Apttus__Source__c,"Other Party Paper"))), HYPERLINK("/servlet/servlet.Integration?lid=00b50000000l7uN"&amp;"&amp;eid="&amp;Id, "Send To Other Party", "_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send To Other Party (OBSOLETE)</label>
    <type>Text</type>
</CustomField>