force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Submit_For_Changes__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Submit_For_Changes__c</fullName>
    <description>Submit agreement for changes</description>
    <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,"In Authoring"),ISPICKVAL(Apttus__Source__c,"Other Party Paper")),(ISPICKVAL(Apttus__Status_Category__c,"In Signatures"))),HYPERLINK("/apex/Apttus__AgreementSubmitChanges?id=" &amp;Id, IMAGE("/resource/Apttus__Button_SubmitForChanges", "Submit For Changes"), "_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Submit agreement for changes</inlineHelpText>
    <label>Submit For Changes</label>
    <type>Text</type>
</CustomField>