force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Submit_Request__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Submit_Request__c</fullName>
    <description>Submit the agreement request</description>
    <formula>IF (AND(ISPICKVAL(Apttus__Status_Category__c,"Request"),OR(ISPICKVAL(Apttus__Status__c,"Request"),ISPICKVAL(Apttus__Status__c,"In Amendment"),ISPICKVAL(Apttus__Status__c,"In Renewal"),ISPICKVAL(Apttus__Status__c,""))), HYPERLINK("/apex/Apttus__AgreementSubmitRequest?id=" &amp;Id, IMAGE("/resource/Apttus__Button_SubmitRequest", "Submit Request"), "_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Submit the agreement request</inlineHelpText>
    <label>Submit Request</label>
    <type>Text</type>
</CustomField>