force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Terminate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Terminate__c</fullName>
    <description>Terminate the agreement</description>
    <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,"In Effect"),NOT(ISPICKVAL(Apttus__Status__c,"Being Amended")), NOT(ISPICKVAL(Apttus__Status__c,"Being Renewed")))),HYPERLINK("/apex/Apttus__AgreementTerminate?id=" &amp; Id, IMAGE("/resource/Apttus__Button_Terminate", "Terminate"),"_self"), NULL)</formula>
    <inlineHelpText>Terminate the agreement</inlineHelpText>
    <label>Terminate</label>
    <type>Text</type>
</CustomField>