force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_View_Draft_Contract__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_View_Draft_Contract__c</fullName>
    <description>Conditionally show the "Preview" custom button if the contract status is Request</description>
    <formula>IF (ISPICKVAL(Apttus__Status_Category__c, "Request"), HYPERLINK("/apex/Apttus__SelectTemplate?id=" &amp;Id &amp; "&amp;action=Preview_Agreement&amp;templateType=Agreement", IMAGE("/resource/Apttus__Button_Preview", "Preview"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Preview the agreement</inlineHelpText>
    <label>Preview</label>
    <type>Text</type>
</CustomField>