force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_View_Final_Contract__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_View_Final_Contract__c</fullName>
    <description>Conditionally show the "Generate" custom button if the contract status category is "Request".</description>
    <formula>IF (ISPICKVAL(Apttus__Status_Category__c, "Request"), HYPERLINK("/apex/Apttus__SelectTemplate?id="&amp;Id &amp; "&amp;action=Generate_Agreement&amp;templateType=Agreement", IMAGE("/resource/Apttus__Button_Generate", "Generate"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generate the agreement</inlineHelpText>
    <label>Generate</label>
    <type>Text</type>
</CustomField>