force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Import_Offline_Document__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Import_Offline_Document__c</fullName>
    <description>Conditionally show the "Import Offline Document" custom link if the status category is not "In Effect" or "Expired" or "Terminated" or "Amended" or "Cancelled"</description>
    <formula>IF (NOT(OR(ISPICKVAL(Apttus__Status_Category__c, "In Effect"), ISPICKVAL(Apttus__Status_Category__c, "Expired"),ISPICKVAL(Apttus__Status_Category__c, "Terminated"),ISPICKVAL(Apttus__Status_Category__c, "Amended"),ISPICKVAL(Apttus__Status_Category__c, "Cancelled"))), HYPERLINK("/apex/Apttus__OfflineDocumentImport?id="&amp;Id, IMAGE("/resource/Apttus__Button_ImportOfflineDocument", "Import Offline Document"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import Offline Document</label>
    <type>Text</type>
</CustomField>