force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__InitiateTermination__c.field-meta.xml
<CustomField>
    <fullName>Apttus__InitiateTermination__c</fullName>
    <description>Conditionally show the "Initiate Termination" custom button.</description>
    <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,"In Effect"),NOT(ISPICKVAL(Apttus__Status__c,"Being Amended")), NOT(ISPICKVAL(Apttus__Status__c,"Being Renewed")),NOT(ISPICKVAL(Apttus__Status__c,"Being Terminated")))),HYPERLINK("/apex/Apttus__AgreementTerminationInitiate?id=" &amp; Id, IMAGE("/resource/Apttus__Button_InitiateTermination", "Initiate Termination"),"_self"), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initiate Termination</label>
    <type>Text</type>
</CustomField>