force-app/main/default/objects/Apttus__APTS_Agreement__c/validationRules/Apttus__End_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Apttus__End_Date_Check</fullName>
    <active>true</active>
    <description>Check that either perpetual is checked or end date is filled in when agreement goes into effect</description>
    <errorConditionFormula>AND(
ISPICKVAL(Apttus__Status_Category__c,"In Effect"),
AND(ISNULL(Apttus__Contract_End_Date__c),NOT(Apttus__Perpetual__c)),
OR(ISNULL(Apttus__Term_Months__c),Apttus__Term_Months__c&lt;=0)
)</errorConditionFormula>
    <errorDisplayField>Apttus__Contract_End_Date__c</errorDisplayField>
    <errorMessage>Please enter the Agreement End Date or mark the Agreement as Perpetual prior to executing the agreement.</errorMessage>
</ValidationRule>